add use expose and scope semantics

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <script type="module" src="/src/main.ts"></script>
     <div id="app">
-      <page-module-share-vue />
+      <page-module-share-vue></page-module-share-vue>
     </div>
   </body>
 </html>
